--- a/CTS_Analytics/Views/Mnemonic/Mine_konv.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_konv.cshtml
@@ -24,14 +24,14 @@
 
         <div class="side w385">
             <div class="line">
-                <span class="name">@Resources.ResourceMnemonic.ProductionPerShift</span>
+                <span class="name">@Resources.ResourceMnemonic.PerShift</span>
                 <div class="count">@Model.ProductionPerShift.ToString("F")</div>
                 <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 
                 <div class="clearfix"></div>
             </div>
             <div class="line">
-                <span class="name">@Resources.ResourceMnemonic.ProdFact</span>
+                <span class="name">@Resources.ResourceMnemonic.PerPeriod</span>
                 <div class="count">@Model.ProductionPerTimeInterval.ToString("F")</div>
                 <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
 
