--- a/CTS_Analytics/Views/Mnemonic/Partials/_BeltScales4MineMnemonic.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Partials/_BeltScales4MineMnemonic.cshtml
@@ -15,13 +15,13 @@
     </div>
     <div class="text">
         <div class="line">
-            <span class="name">@Resources.ResourceMnemonic.ProductionPerShift</span>
+            <span class="name">@Resources.ResourceMnemonic.PerShift</span>
             <div class="count">@Model.ProductionPerShift.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
             <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
             <div class="clearfix"></div>
         </div>
         <div class="line">
-            <span class="name">@Resources.ResourceMnemonic.ProdFact</span>
+            <span class="name">@Resources.ResourceMnemonic.PerPeriod</span>
             <div class="count">@Model.ProductionPerTimeInterval.ToString("N0", System.Globalization.CultureInfo.CurrentCulture)</div>
             <span class="caption">@Resources.ResourceMnemonic.Tonns</span>
             <div class="clearfix"></div>
