--- a/CTS_Analytics/Views/Mnemonic/tsof2-more.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/tsof2-more.cshtml
@@ -1,9 +1,8 @@
-﻿@model CTS_Analytics.Models.Mnemonic.cofvModel
+﻿@model CTS_Analytics.Models.Mnemonic.cofvModel_more
 @{
     Layout = "~/Views/Mnemonic/_MnemonicStation.cshtml";
     ViewBag.PageName = Resources.ResourceGeneral.HeaderMainPageName;
 }
-
 
 <div class="main">
     <div id="tsof2-more_bg">
