--- a/CTS_Analytics/Views/Mnemonic/Mine_raspozn.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/Mine_raspozn.cshtml
@@ -30,7 +30,7 @@
             </div>
             <div class="line">
                 <span class="name">@Resources.ResourceMnemonic.RecognintionRate</span>
-                <div class="count">95</div>
+                <div class="count">@Model.RecognPercent</div>
                 <span class="caption">%</span>
                 <div class="clearfix"></div>
             </div>
