--- a/CTS_Analytics/Views/Mnemonic/home.cshtml
+++ b/CTS_Analytics/Views/Mnemonic/home.cshtml
@@ -8,7 +8,7 @@
         <div class="bg"></div>
         <div class="txt">
             <h1>
-                добро пожаловать в систему учета угля
+                @Resources.ResourceMnemonic.WelcomeSign
                 <span>coal tracking system</span>
             </h1>
         </div>
