--- a/CTS_Analytics/Views/Shared/_Layout.cshtml
+++ b/CTS_Analytics/Views/Shared/_Layout.cshtml
@@ -169,7 +169,7 @@
             }
             if (CTS_Core.CtsAuthorizeProvider.CheckIsInRole(User.Identity, CTS_Core.Roles.StDubovRoleName))
             {
-                <li><a href='@Url.Action("sbub", controller)'>@Resources.ResourceMnemonic.StDubovName</a></li>
+                <li><a href='@Url.Action("sdub", controller)'>@Resources.ResourceMnemonic.StDubovName</a></li>
             }
             if (CTS_Core.CtsAuthorizeProvider.CheckIsInRole(User.Identity, CTS_Core.Roles.StRaspRoleName))
             {
