--- a/CTS_Analytics/Views/DashBoard/_DashAlarmLayout.cshtml
+++ b/CTS_Analytics/Views/DashBoard/_DashAlarmLayout.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewBag.PageName = Resources.ResourceDashboard.PageName;
-    Layout = "~/Views/DashBoard/_DashLayout.cshtml";
+    //ViewBag.PageName = Resources.ResourceDashboard.PageName;
+    Layout = "~/Views/DashBoard/_AlarmLayout.cshtml";
 }
 
 <div class="topmenu">
